[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumCat"
version = "0.0.1"
authors = [
  { name="Alex Koziell-Pipe", email="alexkoziell@gmail.com" },
]
description = "Hybrid quantum-classical algorithms with category-theoretic semantics."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
development = [ "pre-commit >= 3.3.3" ]

[project.urls]
"Homepage" = "https://github.com/alexkoziell/QuantumCat"
"Bug Tracker" = "https://github.com/alexkoziell/QuantumCat/issues"
